# talk-dvc-vscode

./: .gitignore  README.md  dvc.yaml  intro_to_dvc.md  params.yaml  pyproject.toml  requirements.txt
assets/: docs_issues_eval_raw.jsonl.dvc  docs_issues_training_raw.jsonl.dvc
configs/: .gitignore  config_1.cfg.dvc  config_2.cfg.dvc  config_original.cfg
notebooks/: results.ipynb
scripts/: filter.py  init_files.py  preprocess.py
training/model_1/: .gitignore
