[tool.poetry]
name = "talk-dvc-vscode"
version = "0.1.0"
description = ""
authors = ["Alon Samuel"]
readme = "README.md"
packages = [{include = "talk_dvc_vscode"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
spacy = "^3.5.0"
dvc = "^2.45.1"
ipykernel = "^6.21.2"
pandas = "^1.5.3"
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
